kubernetes/apps/ollama/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
  labels:
    app.kubernetes.io/name: ollama
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ollama.localhost.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
